--- a/viikko2/nhl-reader/pyproject.toml
+++ b/viikko2/nhl-reader/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.10"
 requests = "^2.31.0"
 
 
+[tool.poetry.group.dev.dependencies]
+autopep8 = "^2.0.4"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
